[package]
name = "fft"
version = "0.1.0"
authors = ["Heribert Schütz <hs@webxcerpt.com>"]
edition = "2018"

[lib]
name = "fft_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.80"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

num-complex = "0.4.1"
num-traits = "0.2.15"
rustfft = "6.0.1"
anyhow = "1.0.57"
# array-init = "2.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"

# no, we want fast code:
opt-level = 3
